# transformer-systems

./: .gitignore  pyproject.toml
experiments/vllm/: test00.py
reports/: transformer_execution.md  vllm_first_inference.md
reproductions/device_split/: analysis.md
reproductions/embedding_bounds/: analysis.md  reproduce_raw.py
src/transformer/: tiny_block.py
tests/: test_tiny_block.py
